# time-lapse

./: .editorconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: demo.yml  flake8.yml  tests.yml
demo/: Makefile
scripts/: 080614_S60_Hibiscus.py  101129_DSC_1.py  101203_DSC_2.py  101231_DSC_1.py  110209_ADL_1.py  120524_ADL_ARN_EC_Archery.py  121004_ARN_1.py  121103_ARN_2.py  130305_ARN_1_2.py  140416_ARN_140417_1.py  150205_150206_ARN_1.py  151203_ADL_1_3_4.py  160605_ADL_Taboe_Tango.py  160813_ADL_1_2.py  160813_ARN_Rhein_in_Flammen.py  171119_APL_2_3.py  180430_APL_1_2.py  180628_APL_1.py  180727_ADL_APL_1_2_4_5.py  180727_ADL_APL_Lunar_Eclipse.py  180810_APL_1.py  180901_ADL_1_2.py  180921_ADL_1.py  181012_ADL_1.py  181014_ADL_1_2.py  181019_ADL_1.py  181019_ADL_CaDansa.py  190429_APL_1_2_3_4_5.py  190430_APL_1.py  190430_APL_2_3_4.py  191108_ADL_1_2_3.py  200606_WEN_1.py  200713_APL_ADL_1_2_3_4.py  201018_WEN_1_3.py  201118_APL_3.py  210207_ADL_1_2.py  210306_APL_Radio_Kootwijk.py  220130_APL_2.py  220219_APL_1_4.py  220323_APL_A2.py  (+27 more)
tests/: test_cli.py
time_lapse/: __init__.py  check_interval.py  cli.py  detect_audio.py  output.py  source.py  thumbnail.py  watermark.py
time_lapse_assemble/: output.py  watermark.py
