[build-system]
requires = ['flit_core>=3.9']
build-backend = 'flit_core.buildapi'

[project]
name = 'time-lapse'
version = '6.0'
description = 'Time-lapse movie assembly'
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE'}
authors = [
    {name = 'Arne de Laat', email = 'arne@delaat.net'},
]
maintainers = [
    {name = 'Arne de Laat', email = 'arne@delaat.net'},
]
keywords = [
    'ffmpeg',
    'photography',
    'time-lapse',
]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Multimedia :: Video :: Conversion',
]
dependencies = [
    'exifreader==0.1.1',
    'ffmpeg-python==0.2.0',
    'pillow==10.1.0',
]

[project.optional-dependencies]
graph = [
    'graphviz',
]
dev = [
    'coverage==7.3.2',
    'mypy==1.7.0',
]
publish = [
    'flit==3.9.0',
]

[project.urls]
Homepage = 'https://arne.delaat.net/timelapse.html'
Repository = 'https://github.com/153957/time-lapse'

[project.scripts]
timelapse = 'time_lapse.cli:main'
check_interval = 'time_lapse.check_interval:main'

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.format]
quote-style = 'single'  # Prefer single quotes, except for triple quotes strings

[tool.ruff.lint]
select = ['ALL']  # https://docs.astral.sh/ruff/rules/
ignore = [
    'ANN101',  # No need to add type to self
    'CPY001',  # Do not require copyright notices
    'D',  # Ignore docstring checks
    'EM',  # Allow messages directly in exceptions
    'FBT001',  # Allow positional for boolean arguments
    'FBT002',  # Allow default value for boolean arguments
    'PD',  # Not using pandas
    'PLR0913',  # Allow functions with many arguments
    'PT',  # Not using pytest
    'RET504',  # Allow variable assignment before return
    'SIM108',  # Allow if-else block instead of ternary
    'T201',  # Allow using print
    'TRY003',  # Specific messages for common exception classes
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
lines-between-types = 1
section-order = [
    'future',
    'standard-library',
    'third-party',
    'ffmpeg',
    'first-party',
    'local-folder',
]

[tool.ruff.lint.isort.sections]
ffmpeg = ['ffmpeg']

[tool.coverage.run]
branch = true
source = [
    'time_lapse',
    'tests',
]
