[metadata]
name = time-lapse
version = 1
url = https://github.com/153957/time-lapse
author = Arne de Laat
author_email = arne@delaat.net
maintainer = Arne de Laat
maintainer_email = arne@delaat.net
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Video :: Conversion
license = MIT
license_file = LICENSE
description = Time-lapse movie assembly
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ffmpeg
    photography
    time-lapse

[options]
packages =
    time_lapse
install_requires =
    exifreader
    ffmpeg-python

[options.extras_require]
graph =
    graphviz
dev =
    coverage
    flake8
    flake8-isort
    pep8-naming
    build
    twine

[options.entry_points]
console_scripts =
    timelapse = time_lapse.cli:main
    check_interval = time_lapse.check_interval:main

[flake8]
ignore =
    W503
    E501

[isort]
line_length = 120
lines_between_types = 1
multi_line_output = 4
known_ffmpeg = ffmpeg
known_first_party = time_lapse
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FFMPEG
    FIRSTPARTY
    LOCALFOLDER

[coverage:run]
branch = true
source =
    time_lapse
    tests
